lib/src/ffr_crypto_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void ffr_crypto_free_string(ffi.Pointer<ffi.Char> ptr);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Size)>()
external void ffr_crypto_free_bytes(ffi.Pointer<ffi.UnsignedChar> ptr, int len);

@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Size)>()
external int ffr_crypto_random_bytes(
  ffi.Pointer<ffi.UnsignedChar> buf,
  int len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.UnsignedInt,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int ffr_crypto_rsa_generate_keypair(
  int key_size,
  ffi.Pointer<ffi.Pointer<ffi.Char>> pub_pem,
  ffi.Pointer<ffi.Pointer<ffi.Char>> priv_pem,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int ffr_crypto_rsa_encrypt(
  ffi.Pointer<ffi.Char> pub_key_pem,
  ffi.Pointer<ffi.UnsignedChar> plaintext,
  int plaintext_len,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out_ciphertext,
  ffi.Pointer<ffi.Size> out_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int ffr_crypto_rsa_decrypt(
  ffi.Pointer<ffi.Char> priv_key_pem,
  ffi.Pointer<ffi.UnsignedChar> ciphertext,
  int ciphertext_len,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out_plaintext,
  ffi.Pointer<ffi.Size> out_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int ffr_crypto_rsa_sign(
  ffi.Pointer<ffi.Char> priv_key_pem,
  ffi.Pointer<ffi.UnsignedChar> digest,
  int digest_len,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out_sig,
  ffi.Pointer<ffi.Size> out_sig_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
  )
>()
external int ffr_crypto_rsa_verify(
  ffi.Pointer<ffi.Char> pub_key_pem,
  ffi.Pointer<ffi.UnsignedChar> digest,
  int digest_len,
  ffi.Pointer<ffi.UnsignedChar> sig,
  int sig_len,
);

@ffi.Native<
  ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Pointer<HasherContext>>)
>()
external int ffr_crypto_hasher_new(
  int alg_id,
  ffi.Pointer<ffi.Pointer<HasherContext>> out_hasher,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<HasherContext>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
  )
>()
external int ffr_crypto_hasher_update(
  ffi.Pointer<HasherContext> hasher,
  ffi.Pointer<ffi.UnsignedChar> data,
  int len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<HasherContext>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int ffr_crypto_hasher_finalize(
  ffi.Pointer<HasherContext> hasher,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out_digest,
  ffi.Pointer<ffi.Size> out_len,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<HasherContext>)>()
external void ffr_crypto_hasher_free(ffi.Pointer<HasherContext> hasher);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int ffr_crypto_aes_gcm_encrypt(
  ffi.Pointer<ffi.UnsignedChar> key,
  int key_len,
  ffi.Pointer<ffi.UnsignedChar> plaintext,
  int plaintext_len,
  ffi.Pointer<ffi.UnsignedChar> nonce,
  int nonce_len,
  ffi.Pointer<ffi.UnsignedChar> aad,
  int aad_len,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out_ciphertext,
  ffi.Pointer<ffi.Size> out_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int ffr_crypto_aes_gcm_decrypt(
  ffi.Pointer<ffi.UnsignedChar> key,
  int key_len,
  ffi.Pointer<ffi.UnsignedChar> ciphertext,
  int ciphertext_len,
  ffi.Pointer<ffi.UnsignedChar> nonce,
  int nonce_len,
  ffi.Pointer<ffi.UnsignedChar> aad,
  int aad_len,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out_plaintext,
  ffi.Pointer<ffi.Size> out_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int ffr_crypto_chacha20_poly1305_encrypt(
  ffi.Pointer<ffi.UnsignedChar> key,
  int key_len,
  ffi.Pointer<ffi.UnsignedChar> plaintext,
  int plaintext_len,
  ffi.Pointer<ffi.UnsignedChar> nonce,
  int nonce_len,
  ffi.Pointer<ffi.UnsignedChar> aad,
  int aad_len,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out_ciphertext,
  ffi.Pointer<ffi.Size> out_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Size>,
  )
>()
external int ffr_crypto_chacha20_poly1305_decrypt(
  ffi.Pointer<ffi.UnsignedChar> key,
  int key_len,
  ffi.Pointer<ffi.UnsignedChar> ciphertext,
  int ciphertext_len,
  ffi.Pointer<ffi.UnsignedChar> nonce,
  int nonce_len,
  ffi.Pointer<ffi.UnsignedChar> aad,
  int aad_len,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out_plaintext,
  ffi.Pointer<ffi.Size> out_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.UnsignedInt,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
  )
>()
external int ffr_crypto_pbkdf2(
  ffi.Pointer<ffi.UnsignedChar> password,
  int password_len,
  ffi.Pointer<ffi.UnsignedChar> salt,
  int salt_len,
  int iterations,
  ffi.Pointer<ffi.UnsignedChar> out_key,
  int out_key_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
  )
>()
external int ffr_crypto_hkdf(
  ffi.Pointer<ffi.UnsignedChar> ikm,
  int ikm_len,
  ffi.Pointer<ffi.UnsignedChar> salt,
  int salt_len,
  ffi.Pointer<ffi.UnsignedChar> info,
  int info_len,
  ffi.Pointer<ffi.UnsignedChar> out_key,
  int out_key_len,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Int,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
  )
>()
external int ffr_crypto_argon2(
  ffi.Pointer<ffi.UnsignedChar> password,
  int password_len,
  ffi.Pointer<ffi.UnsignedChar> salt,
  int salt_len,
  int m_cost,
  int t_cost,
  int p_cost,
  int variant,
  ffi.Pointer<ffi.UnsignedChar> out_key,
  int out_key_len,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Pointer<ffi.UnsignedChar>)
>()
external int ffr_crypto_ed25519_generate_keypair(
  ffi.Pointer<ffi.UnsignedChar> out_pub,
  ffi.Pointer<ffi.UnsignedChar> out_priv,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
  )
>()
external int ffr_crypto_ed25519_sign(
  ffi.Pointer<ffi.UnsignedChar> priv_key,
  ffi.Pointer<ffi.UnsignedChar> message,
  int message_len,
  ffi.Pointer<ffi.UnsignedChar> out_sig,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Size,
    ffi.Pointer<ffi.UnsignedChar>,
  )
>()
external int ffr_crypto_ed25519_verify(
  ffi.Pointer<ffi.UnsignedChar> pub_key,
  ffi.Pointer<ffi.UnsignedChar> message,
  int message_len,
  ffi.Pointer<ffi.UnsignedChar> sig,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Pointer<ffi.UnsignedChar>)
>()
external int ffr_crypto_x25519_generate_keypair(
  ffi.Pointer<ffi.UnsignedChar> out_pub,
  ffi.Pointer<ffi.UnsignedChar> out_priv,
);

@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Pointer<ffi.UnsignedChar>,
  )
>()
external int ffr_crypto_x25519_compute_shared_secret(
  ffi.Pointer<ffi.UnsignedChar> priv_key,
  ffi.Pointer<ffi.UnsignedChar> peer_pub_key,
  ffi.Pointer<ffi.UnsignedChar> out_secret,
);

final class HasherContext extends ffi.Opaque {}
